Article page infographic on mobile fix

--- a/themes/gv_sky/css/sass/_parts_blog/article-body.sass
+++ b/themes/gv_sky/css/sass/_parts_blog/article-body.sass
@@ -167,10 +167,14 @@
 			margin: 15px !important
 
 		> .field-items > .field-item
-			> .rtecenter:first-child > img
+			> .rtecenter:nth-child(1) > img
+				width: 100% !important
+				max-width: 700px
+
+			> .rtecenter:nth-child(2) > img
 				width: 100% !important
 				height: auto !important
-				max-width: 700px
+			
 			img 
 				max-width: 100%
 
